// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Infrastructure Api Generators create stack should call generate api payload with correct arguments 1`] = `
Array [
  Array [
    Object {
      "name": "testStack",
      "type": "jupyer",
    },
    Object {
      "domain": "test-datalabs.nerc.ac.uk",
      "test": "testlab",
    },
  ],
]
`;

exports[`Infrastructure Api Generators create stack should handle api errors 1`] = `
Object {
  "name": "testStack",
  "type": "jupyer",
}
`;

exports[`Infrastructure Api Generators create stack should send a create request 1`] = `
Array [
  Array [
    Object {
      "expected": "request",
    },
    Object {
      "domain": "test-datalabs.nerc.ac.uk",
      "test": "testlab",
    },
  ],
]
`;

exports[`Infrastructure Api Generators delete stack should call generate api payload with correct arguments 1`] = `[Error: Unable to create stack Error: Request failed with status code 400]`;

exports[`Infrastructure Api Generators delete stack should handle api errors 1`] = `
Object {
  "name": "testStack",
}
`;

exports[`Infrastructure Api Generators delete stack should send a delete request 1`] = `
Array [
  Array [
    Object {
      "name": "testStack",
      "type": "jupyer",
    },
    Object {
      "domain": "test-datalabs.nerc.ac.uk",
      "test": "testlab",
    },
  ],
]
`;
